--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <meta name="viewport" content="initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link href="styles.cdc897948c93495f88d6.css" rel="stylesheet"></head>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link href="styles.ad4d208729633f3ac1ea.css" rel="stylesheet"></head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="app.bundle.cdc897948c93495f88d6.js"></script></body>
+<script type="text/javascript" src="app.bundle.ad4d208729633f3ac1ea.js"></script></body>
 </html>
